--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>The Pond: Orion Drift Comp</title>
+  <title>Join</title>
   <style>
     body {
       margin: 0;
@@ -56,10 +56,11 @@
   </style>
 </head>
 <body>
-  <h1>The Pond: Orion Drift Comp</h1>
+  <h1>The Aliens:</h1>
   <p>
-    Welcome to FrogForce’s home base. The Pond is where Orion Drift’s top drifters gather to compete, connect, and evolve. Whether you’re here to challenge gravity or just hang out and grow, there’s a spot for you in the lineup.
-  </p>
-  <a class="button" href="https://discord.gg/z2yEuBxgnx" target="_blank">Join The Pond on Discord</a>
+    Welcome Spew13, new or not. Join our Discord for new updates, and to be aware of events upcoming. Click below to quickly access...
+  <a class="button" href="https://discord.gg/V36ACwrB" target="_blank">Join The Aliens Discord</a>
+  <a class="button" href="https://spew13.github.io/" target="_blank">Official Site</a>
 </body>
 </html>
+
