--- a/index.html
+++ b/index.html
@@ -58,9 +58,10 @@
 <body>
   <h1>The Aliens:</h1>
   <p>
-    Welcome Spew13, new or not. Join our Discord for new updates, and to be aware of events upcoming. Click below to quickly access...
+    Welcome to Spew13, new or not. Join our Discord for new updates, and to be aware of events upcoming. Click below to quickly access...
   <a class="button" href="https://discord.gg/V36ACwrB" target="_blank">Join The Aliens Discord</a>
   <a class="button" href="https://spew13.github.io/" target="_blank">Official Site</a>
 </body>
 </html>
+
 
