--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
       text-align: center;
     }
 
+    #margin1 {
+      margin: 35px;
+    }
     h1 {
       font-size: 3rem;
       color: #00ff88;
@@ -59,11 +62,12 @@
   <h1>The Aliens:</h1>
   <p>
     Welcome to Spew13, new or not. Join our Discord for new updates, and to be aware of events upcoming. Click below to quickly access...
-                                                        
+         <div id="margin1"></div>                                               
   <a class="button" href="https://discord.gg/V36ACwrB" target="_blank">Join The Aliens Discord</a>
   <a class="button" href="https://spew13.github.io/" target="_blank">Official Site</a>
 </body>
 </html>
+
 
 
 
